gChat work in progress

--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -4,6 +4,7 @@ head
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' href='/stylesheets/lobby.css')
+
   title Document
 .game_window
   //
@@ -24,6 +25,10 @@ head
       button.accordion CHAT
       script(src='/scripts/chatbox.js')
       script(src='/scripts/g_chat_frontend.js')
+      script(type='module').
+        import { io } from "https://cdn.socket.io/4.4.1/socket.io.esm.min.js";
+        const socket = io();
+
   .bot-center
     .game-list
       .box-game-list
