front end card dealing styling + script

--- a/uno/views/login_test.pug
+++ b/uno/views/login_test.pug
@@ -15,7 +15,7 @@ head
       #inputContainer
         input(type='text' placeholder='Enter Username' required='terms' name='uname')
         input(type='password' placeholder='Enter Password' required='terms' name='pword')
-        button.loginButton(type='submit') &gt;
+        button.loginButton(type='submit') >
       a.createAccount(href='/registration')
         | Don't have an account?
         | Create one!
