Login and registration connected

--- a/uno/views/registration.pug
+++ b/uno/views/registration.pug
@@ -2,6 +2,7 @@ doctype html
 head
   meta(charset='UTF-8')
   link(rel='stylesheet' href='stylesheets/style.css')
+  script(src='scripts/register.js')
   title Home
 .unoHeader
   span#header1 U
@@ -14,7 +15,9 @@ head
         #lHeader
           b Register
       #inputContainer
-        input(type='text' placeholder='Enter Username' required='terms' name='uname')
-        input(type='password' placeholder='Enter Password' required='terms' name='pword')
-        input(type='password' placeholder='Confirm Password' required='terms' name='pwordConfirm')
-        button.loginButton(type='submit') &gt;
+        input(type='text' placeholder='Enter Email' required='terms' name='email' id='email')
+        input(type='text' placeholder='Enter Username' required='terms' name='uname' id='username')
+
+        input(type='password' placeholder='Enter Password' required='terms' name='pword' id='password')
+        input(type='password' placeholder='Confirm Password' required='terms' name='pwordConfirm' id='confirm_pass')
+        button.loginButton(type='button' id="create" onclick = 'validate()') &gt;
