--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -23,11 +23,10 @@ head
         br
         br
       button.accordion CHAT
+      script(src='/socket.io/socket.io.js')
       script(src='/scripts/chatbox.js')
       script(src='/scripts/g_chat_frontend.js')
-      script(type='module').
-        import { io } from "https://cdn.socket.io/4.4.1/socket.io.esm.min.js";
-        const socket = io();
+
 
   .bot-center
     .game-list
