--- a/uno/public/stylesheets/lobby.css
+++ b/uno/public/stylesheets/lobby.css
@@ -293,3 +293,78 @@ button.accordion:hover, button.accordion.is-open {
 }
 
 
+/* below is for chat messages */
+
+
+    .comments-main{
+    background: #FFF;
+    }
+    .comment time, .comment:hover time,.icon-rocknroll, .like-count {
+    -webkit-transition: .25s opacity linear;
+    transition: .25s opacity linear;
+    }
+    .comments-main ul li{
+    list-style: none;
+    }
+    .comments .comment {
+    padding: 5px 10px;
+    background: #2bacfc;
+    }
+    .comments .comment:hover time{
+    opacity: 1;
+    }
+    .comments .user-img img {
+    width: 50px;
+    height: 50px;
+    }
+    .comments .comment h4 {
+    display: inline-block;
+    font-size: 16px;
+    }
+    .comments .comment h4 a {
+    color: #404040;
+    text-decoration: none;
+    }
+    .comments .comment .icon-rocknroll {
+    color: #545454;
+    font-size: .85rem;
+    }
+    .comments .comment .icon-rocknroll:hover {
+    opacity: .5;
+    }
+    .comments .comment time,.comments .comment .like-count,.comments .comment .icon-rocknroll {
+    font-size: .75rem;
+    opacity: 0;
+    }
+    .comments .comment time, .comments .comment .like-count {
+    font-weight: 300;
+    }
+    .comments .comment p {
+    font-size: 13px;
+    }
+    .comments .comment p .reply {
+    color: #BFBFA8;
+    cursor: pointer;
+    }
+    .comments .comment .active {
+    opacity: 1;
+    }
+    .icon-rocknroll {
+    background: none;
+    outline: none;
+    cursor: pointer;
+    margin: 0 .125rem 0 0;
+    }
+    .comments .comment:hover .icon-rocknroll,.comments .comment:hover .like-count {
+    opacity: 1;
+    }
+    .comment-box-main{
+    background: #CA1D5F;
+    }
+    @media (min-width: 320px) and (max-width: 480px){
+    .comments .comment h4 {
+    font-size: 12px;
+    }
+    .comments .comment p{
+    font-size: 11px;
+    }
