--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -12,79 +12,22 @@ script(src='/socket.io/socket.io.js')
         a.reshuffleText Deck Empty
         button.reshuffle(type="button") Reshuffle
         .deckContainer
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
-            .card.deckCard
     .unoButtonContainer
         button.unoButton(type="button") Uno!
     .youDidNotSayUnoButtonContainer
         button.youDidNotSayUnoButton(type="button") You didn't say Uno!
     #myHand.hand
+    #opNameLeft.opponentName Sophia
     #leftOpponent.hand
         .card.leftOpponentCard
         .card.leftOpponentCard
         .card.leftOpponentCard
+    #opNameTop.opponentName Troy
     #topOpponent.hand
         .card.topOpponentCard
         .card.topOpponentCard
         .card.topOpponentCard
+    #opNameRight.opponentName Olivier
     #rightOpponent.hand
         .card.rightOpponentCard
         .card.rightOpponentCard
