lobby functonality in progress

--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -25,26 +25,12 @@ head
       button.accordion CHAT
       script(src='/socket.io/socket.io.js')
       script(src='/scripts/chatbox.js')
-      script(src='/scripts/g_chat_frontend.js')
-
 
   .bot-center
     .game-list
       .box-game-list
-        .game-card
-          p test
-        .game-card
-          p test
-        .game-card
-          p test
-        .game-card
-          p test
-        .game-card
-          p test
-        .game-card
-          p test
-        .game-card
-          p test
   .bot-right-side
     button.new-game-button CREATE NEW GAME
+    button.start-game START GAME
+     script(src='/scripts/lobby.js')
   // </div>
