--- a/uno/public/stylesheets/lobby.css
+++ b/uno/public/stylesheets/lobby.css
@@ -279,17 +279,67 @@ button.accordion:hover, button.accordion.is-open {
     background-color: #126b0f;
     
     
-
-    
 }
 
 .new-game-button:active {
     font-family: 'Nunito Sans', sans-serif;
     background-color: #126b0f;
-    transform: translate(2px,2px);
-    
+    transform: translate(2px,2px);   
+}
 
+.start-game {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 20px;
+    height: 50px;
+    width: 60%;
+    position:relative;
+    top: 65%;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #25bd20;
+    box-shadow: 5px 5px 7px #323232;
+    visibility: hidden;
+}
+
+.start-game:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
     
+    
+}
+
+.start-game:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    transform: translate(2px,2px);   
+}
+
+.join-game {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 15px;
+    height: 30px;
+    width: 60%;
+    position:relative;
+    top: 65%;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #25bd20;
+    box-shadow: 5px 5px 7px #323232;
+}
+
+.join-game:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    
+    
+}
+
+.join-game:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    transform: translate(2px,2px);   
 }
 
 
@@ -367,4 +417,5 @@ button.accordion:hover, button.accordion.is-open {
     }
     .comments .comment p{
     font-size: 11px;
+    }
     }
