--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -7,19 +7,14 @@ head
 
   title Document
 .game_window
-  //
-    <div class="top">
-    <h1>LOBBY</h1>
-    </div>
-  // <div class="bot">
   .bot-left-side
     .container-chat
       .accordion-content
         .chat-field
         br
         .input-container
-          input.input-field-chat(type='text')
-          button.input-button SEND
+          input#input-field-chat.input-field-chat(type='text')
+          button#input-button.input-button SEND
         br
         br
       button.accordion CHAT
