added refresh gamelist button, removed socket

--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -25,8 +25,8 @@ head
       button.accordion CHAT
       script(src='/socket.io/socket.io.js')
       script(src='/scripts/chatbox.js')
-
   .bot-center
+    button.refresh-games-button REFRESH GAME LIST
     .game-list
       .box-game-list
   .bot-right-side
