--- a/uno/public/stylesheets/lobby.css
+++ b/uno/public/stylesheets/lobby.css
@@ -342,6 +342,32 @@ button.accordion:hover, button.accordion.is-open {
     transform: translate(2px,2px);   
 }
 
+.refresh-games-button {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 15px;
+    height: 30px;
+    width: 100%;
+    position:relative;
+    top: 75%;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #25bd20;
+    box-shadow: 5px 5px 7px #323232;
+}
+
+.refresh-games-button:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    
+    
+}
+
+.refresh-games-button:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    transform: translate(2px,2px);   
+}
 
 /* below is for chat messages */
 
