discard pile now reflects card with highest order from gamestate

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -8,6 +8,7 @@ script(src='/socket.io/socket.io.js')
 .gameScreenContainer
     .discard
         a Discard Pile
+        .card.discardCard
     .deck
         a.reshuffleText Deck Empty
         button.reshuffle(type="button") Reshuffle
