Added wildcard modal, playable

--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -47,17 +47,16 @@ script(src='/socket.io/socket.io.js')
         button.accordion CHAT
         script(src='/scripts/chatbox.js')
 
-    a.modal-open(href='#modal') Click To Open Regular Modal
+    a.modal-open(href='#modal')
     #modal.modal
         .modal-content
             a.modal-close(href='#' title='Close Modal') X
             h1 Choose a Color
             .modal-area
-                button#redbttn.choosebttn Click Me
-                button#bluebttn.choosebttn Click Me
-                button#yellowbttn.choosebttn Click Me
-                button#greenbttn.choosebttn Click Me
-
+                button#redbttn.choosebttn RED
+                button#bluebttn.choosebttn BLUE
+                button#yellowbttn.choosebttn YELLOW
+                button#greenbttn.choosebttn GREEN
 
 
 
