--- a/uno/views/lobby.pug
+++ b/uno/views/lobby.pug
@@ -26,6 +26,6 @@ head
       .box-game-list
   .bot-right-side
     button.new-game-button CREATE NEW GAME
-    button.start-game START GAME
+    button.logout-button LOGOUT
      script(src='/scripts/lobby.js')
   // </div>
