--- a/uno/public/stylesheets/game.css
+++ b/uno/public/stylesheets/game.css
@@ -680,3 +680,62 @@ button.accordion:hover, button.accordion.is-open {
     }
 
 /* END CHAT */
+
+
+.start-game {
+    visibility: hidden;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 20px;
+    height: 50%;
+    width: 200%;
+    position:absolute;
+    top: 120%;
+    right: 10%;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #f7e754;
+    box-shadow: 5px 5px 7px #323232;
+}
+
+.start-game:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #998f02;
+    
+    
+}5
+
+.start-game:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #998f02;
+    transform: translate(2px,2px);   
+}
+
+.leave-game {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 20px;
+    height: 50px;
+    width: 20%;
+    position:absolute;
+    bottom: 0px;
+    right: 0px;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #25bd20;
+    box-shadow: 5px 5px 7px #323232;
+}
+
+.leave-game:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    
+    
+}
+
+.leave-game:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    transform: translate(2px,2px);   
+}
+
