--- a/uno/public/stylesheets/lobby.css
+++ b/uno/public/stylesheets/lobby.css
@@ -296,33 +296,6 @@ button.accordion:hover, button.accordion.is-open {
     transform: translate(2px,2px);   
 }
 
-.start-game {
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 20px;
-    height: 50px;
-    width: 60%;
-    position:relative;
-    top: 65%;
-    border-color: #151515;
-    border-width: 3px;
-    border-radius: 5px;
-    background-color: #25bd20;
-    box-shadow: 5px 5px 7px #323232;
-    visibility: hidden;
-}
-
-.start-game:hover {
-    font-family: 'Nunito Sans', sans-serif;
-    background-color: #126b0f;
-    
-    
-}
-
-.start-game:active {
-    font-family: 'Nunito Sans', sans-serif;
-    background-color: #126b0f;
-    transform: translate(2px,2px);   
-}
 
 .join-game {
     font-family: 'Nunito Sans', sans-serif;
@@ -351,6 +324,34 @@ button.accordion:hover, button.accordion.is-open {
     background-color: #ffe814;
     transform: translate(2px,2px);   
 }
+
+.logout-button {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 20px;
+    height: 50px;
+    width: 60%;
+    position:relative;
+    top: 110%;
+    border-color: #151515;
+    border-width: 3px;
+    border-radius: 5px;
+    background-color: #f72a2a;
+    box-shadow: 5px 5px 7px #323232;
+}
+
+.logout-button:hover {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #bf1d1d;
+    
+    
+}
+
+.logout-button:active {
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #126b0f;
+    transform: translate(2px,2px);   
+}
+
 
 .refresh-games-button {
     font-family: 'Nunito Sans', sans-serif;
