--- a/uno/views/game_screen.pug
+++ b/uno/views/game_screen.pug
@@ -20,21 +20,12 @@ script(src='/socket.io/socket.io.js')
     .youDidNotSayUnoButtonContainer
         button.youDidNotSayUnoButton(type="button") You didn't say Uno!
     #myHand.hand
-    #opNameLeft.opponentName Sophia
+    #leftOpponentName.opponentName
     #leftOpponent.hand
-        .card.leftOpponentCard
-        .card.leftOpponentCard
-        .card.leftOpponentCard
-    #opNameTop.opponentName Troy
+    #topOpponentName.opponentName
     #topOpponent.hand
-        .card.topOpponentCard
-        .card.topOpponentCard
-        .card.topOpponentCard
-    #opNameRight.opponentName Olivier
+    #rightOpponentName.opponentName
     #rightOpponent.hand
-        .card.rightOpponentCard
-        .card.rightOpponentCard
-        .card.rightOpponentCard
     .wildcardButtonContainer
     .container-chat
         .accordion-content
@@ -59,6 +50,3 @@ script(src='/socket.io/socket.io.js')
                 button#yellowbttn.choosebttn YELLOW
                 button#greenbttn.choosebttn GREEN
     
-
-
-
